# Python-Training-2

./: .gitignore  main.py  pyproject.toml  task.txt
data/: time_series_temp.csv
filters/: double_exponential_smoothing.py  exponential_smoothing.py  n_sigma.py  time_averaging.py  z_score.py
utils/: convertors.py
